--- a/web/html/login/login.html
+++ b/web/html/login/login.html
@@ -11,13 +11,13 @@
         <div class="form-container login-container">
             <form action="#">
                 <h1>Login</h1>
-                <input type="text" placeholder="Username" />
-                <input type="password" placeholder="Password" />
-                <button>Login</button>
+                <input id="username" type="text" placeholder="Username" />
+                <input id="password" type="password" placeholder="Password" />
+                <button id="login" type="button" onclick="login()">Login</button>
             </form>
         </div>
     </div>
 
     <script src="../../js/login.js"></script>
-</body>
+</body> 
 </html>
