--- a/web/html/user/add-user.html
+++ b/web/html/user/add-user.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>Add New User</h1>
         <form action="#" method="POST">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Enter user name" required>
+            <label for="name">Username</label>
+            <input type="text" id="username" name="name" placeholder="Enter user name" required>
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="Enter user email" required>
@@ -22,8 +22,9 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Enter user password" required>
 
-            <button type="submit">Add User</button>
+            <button type="submit" id="add_user">Add User</button>
         </form>
     </div>
 </body>
+<script src="../../js/user/add-user.js"></script>
 </html>
