--- a/web/html/user/edit-user.html
+++ b/web/html/user/edit-user.html
@@ -11,9 +11,9 @@
     <div class="container">
         <h1>Edit User</h1>
 
-        <form action="#" method="POST">
+        <div style="display: flex; flex-direction: column;">
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" value="John Doe" required>
+            <input type="text" id="username" name="name" value="John Doe" required>
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" value="john.doe@example.com" required>
@@ -24,9 +24,11 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Enter new password (optional)">
 
-            <button type="submit">Update User</button>
-        </form>
+            <button id="edit_user">Update User</button>
+        </div>
+           
     </div>
 
 </body>
+<script type="module" src="../../js/user/edit-user.js"></script>
 </html>
