--- a/web/html/login/login.html
+++ b/web/html/login/login.html
@@ -18,6 +18,6 @@
         </div>
     </div>
 
-    <script src="../../js/login.js"></script>
+    <script type="module" src="../../js/login.js"></script>
 </body> 
 </html>
