feat: get task of an user of admin page

--- a/web/html/task/user-tasks.html
+++ b/web/html/task/user-tasks.html
@@ -6,8 +6,7 @@
     <title>User Tasks</title>
     <link rel="stylesheet" href="../../css/task/user-tasks.css">
 </head>
-<body>
-
+<body onload="getAllTask()">
     <div class="container">
         <h1>Tasks for User: John Doe</h1>
 
@@ -80,4 +79,5 @@
     </div>
 
 </body>
+<script type="module" src="../../js/task/user-task.js"></script>
 </html>
