--- a/web/html/task/edit-task.html
+++ b/web/html/task/edit-task.html
@@ -6,11 +6,11 @@
     <title>Edit Task</title>
     <link rel="stylesheet" href="../../css/task/edit-task.css">
 </head>
-<body>
+<body onload="fillTask()">
     <div class="container">
         <h1>Edit Task</h1>
         
-        <form action="/update-task" method="POST">
+        <div>
             <div class="form-group">
                 <label for="id">Task ID</label>
                 <input type="text" id="id" name="id" value="1" readonly>
@@ -29,9 +29,9 @@
             <div class="form-group">
                 <label for="priority">Priority</label>
                 <select id="priority" name="priority" required>
-                    <option value="Low">Low</option>
-                    <option value="Medium" selected>Medium</option>
-                    <option value="High">High</option>
+                    <option value="0">Low</option>
+                    <option value="1" selected>Medium</option>
+                    <option value="2">High</option>
                 </select>
             </div>
 
@@ -48,17 +48,17 @@
             <div class="form-group">
                 <label for="status">Status</label>
                 <select id="status" name="status" required>
-                    <option value="Pending">Pending</option>
-                    <option value="In Progress" selected>In Progress</option>
-                    <option value="Completed">Completed</option>
+                    <option value="true" selected>True</option>
+                    <option value="false">False</option>
                 </select>
             </div>
 
             <div class="button-container">
-                <button type="submit" class="submit-btn">Update Task</button>
+                <button onclick="updateTask()" id="submit-btn" class="submit-btn">Update Task</button>
             </div>
-        </form>
+        </div>
     </div>
 
 </body>
+<script type="module" src="../../js/task/edit-task.js"></script>
 </html>
