--- a/web/html/user/add-user.html
+++ b/web/html/user/add-user.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../../css/user/add-user.css">
 </head>
 <body>
+    <a href="javascript:history.back()" class="back-arrow" title="Go Back">&#8592;</a>
+    
     <div class="container">
         <h1>Add New User</h1>
         <div style="display: flex; flex-direction: column;">
