--- a/web/html/user/edit-user.html
+++ b/web/html/user/edit-user.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../../css/user/edit-user.css">
 </head>
 <body>
-
+    <a href="javascript:history.back()" class="back-arrow" title="Go Back">&#8592;</a>
+    
     <div class="container">
         <h1>Edit User</h1>
 
