hotfix: login logic in webadmin

--- a/web/html/task/user-tasks.html
+++ b/web/html/task/user-tasks.html
@@ -10,7 +10,7 @@
     <a href="javascript:history.back()" class="back-arrow" title="Go Back">&#8592;</a>
     
     <div class="container">
-        <h1>Lisk Task</h1>
+        <h1 id="username">Lisk Task</h1>
 
         <table>
             <thead>
