--- a/web/html/task/add-task.html
+++ b/web/html/task/add-task.html
@@ -20,15 +20,16 @@
 
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea id="description" name="description" placeholder="Enter Task Description" rows="4" required></textarea>
+                <textarea id="description" name="description" placeholder="Enter Task Description" rows="4"></textarea>
             </div>
 
             <div class="form-group">
                 <label for="priority">Priority</label>
                 <select id="priority" name="priority" required>
-                    <option value="0">Low</option>
-                    <option value="1">Medium</option>
-                    <option value="2">High</option>
+                    <option value="0">Priority 0</option>
+                    <option value="1">Priority 1</option>
+                    <option value="2">Priority 2</option>
+                    <option value="3">Priority 3</option>
                 </select>
             </div>
 
