--- a/web/html/user/edit-user.html
+++ b/web/html/user/edit-user.html
@@ -14,13 +14,10 @@
 
         <div style="display: flex; flex-direction: column;">
             <label for="name">Name</label>
-            <input type="text" id="username" name="name" value="John Doe" required>
+            <input type="text" id="username" name="name" value="John Doe" required readonly>
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" value="john.doe@example.com" required>
-
-            <label for="dob">Date of Birth</label>
-            <input type="date" id="dob" name="dob" value="1990-01-01" required>
 
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Enter new password (optional)">
